# pii-mask-yoshi

./: .gitignore  .mcp.json  .neko-not-yoshi-allow  .publish-whitelist  CHANGELOG.md  LICENSE  README.ja.md  README.md  THREAT-MODEL.md  index.mjs  package.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
docs/: KEY-MANAGEMENT.md  setup-codex.md  setup-gemini.md
hooks/: hooks.json
rust/: Cargo.toml
rust/pkg/: package.json  pii_engine.d.ts  pii_engine.js  pii_engine_bg.wasm  pii_engine_bg.wasm.d.ts
rust/src/: generated_patterns.rs  lib.rs
scripts/: build-protected.mjs  codegen-patterns.mjs  encode-js-patterns.mjs  pii-read-guard.mjs
src/: cleanup.mjs  converter.mjs  crypto.mjs  encoded-data.mjs  masker.mjs  patterns.mjs  siem-formats.mjs  store.mjs  wasm-loader.mjs
test/: converter.test.mjs  e2e.test.mjs  fuzz-data-a1-results.json  fuzz-data-a1.json  fuzz-data-a2-results.json  fuzz-data-a2.json  fuzz-data-b1-results.json  fuzz-data-b1.json  fuzz-data-b2-results.json  fuzz-data-b2.json  fuzz-data-c-results.json  fuzz-data-c.json  fuzz-data-d1-results.json  fuzz-data-d1.json  fuzz-data-d2-results.json  fuzz-data-d2.json  fuzz-runner.mjs  masker.test.mjs  test-masked-output.md  test-pii.txt  test-real-masked-output.md  test-real-scenario.txt
tests/: block-report.test.mjs  cleanup.test.mjs  crypto.test.mjs
