[package]
name = "pii-engine"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
fancy-regex = "0.14"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# AES-256-GCM 暗号化（パターン保護用、WASM対応）
# alloc feature: Aead trait（decrypt メソッド）を有効化するために必要
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
# PBKDF2 鍵導出（seed+salt → AES鍵）
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
# SHA-256（PBKDF2のハッシュ関数として使用）
sha2 = { version = "0.10", default-features = false }

[profile.release]
opt-level = "s"
lto = true
